# ConfigSystem_I

./: CMakeLists.txt  ConfigSystem_I_zh_CN.ts  LICENSE  README.md
include/config/: config.h
src/: configVar.cpp  main.cpp
